# python-project-52

./: .gitignore  README.md
hexlet-code/: Makefile  pyproject.toml
hexlet-code/task_manager/: settings.py
